[package]
name = "pty2"
version = "0.1.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
repository = "https://github.com/littledivy/pty-rs"
homepage = "https://github.com/littledivy/pty-rs"
license = "MIT"
description = "Fork with new pseudo-terminal (PTY)"
keywords = ["pty", "tty", "pseudo", "terminal", "fork"]

[features]
default       = []
lints         = ["clippy", "nightly"]
nightly       = [] # for building with nightly and unstable features
unstable      = [] # for building with unstable features on stable Rust
debug         = [] # for building with debug messages
travis        = ["lints", "nightly"] # for building with travis-cargo

[dependencies.errno]
version       = "0.2"

[dependencies.libc]
version       = ">= 0.2"

[dependencies.clippy]
version       = "0.0"
optional      = true
